fixing layout problems for different pages

--- a/frontend/components/Profile/Profile.css
+++ b/frontend/components/Profile/Profile.css
@@ -1,5 +1,5 @@
 
-.header {
+section .header {
     padding: 10px;
     width: 100%;
     text-align: center;
@@ -64,14 +64,18 @@
 }
 .options .Post, .options .RSVP {
     background-color: #E0E4E7;
+    border: #E0E4E7;
     flex :1;
     color: 37474F;
-    padding: 8px;
+    padding: 12px;
+    text-align: center;
     width: 50%;
     border-radius: 5px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .options .Post:hover, .options .RSVP:hover {
     background-color: #c9cccf;
+    border: 1px solid black;
 }
